Hyprland: update monitor config

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -7,10 +7,10 @@ bind = $mainMod, m, exec, $scripts/wlogout
 bind = $mainMod_L_CONTROL_SHIFT, m, exit,
 
 # Toggle secondary screens
+bind = $mainMod_SHIFT, F12, dpms, off DP-2
 bind = $mainMod_SHIFT, F12, dpms, off DP-3
-bind = $mainMod_SHIFT, F12, dpms, off HDMI-A-1
+bind = $mainMod, F12, dpms, on DP-2
 bind = $mainMod, F12, dpms, on DP-3
-bind = $mainMod, F12, dpms, on HDMI-A-1
 
 # Switch outputs on main screen.
 # HDM1
@@ -96,10 +96,10 @@ bind = ALT, Tab, bringactivetotop,
 # Move to screen
 bind = $mainMod, q, focusmonitor, DP-3
 bind = $mainMod_SHIFT, q, movewindow, mon:DP-3
-bind = $mainMod, w, focusmonitor, DP-2
-bind = $mainMod_SHIFT, w, movewindow, mon:DP-2
-bind = $mainMod, e, focusmonitor, HDMI-A-1
-bind = $mainMod_SHIFT, e, movewindow, mon:HDMI-A-1
+bind = $mainMod, w, focusmonitor, DP-1
+bind = $mainMod_SHIFT, w, movewindow, mon:DP-1
+bind = $mainMod, e, focusmonitor, DP-2
+bind = $mainMod_SHIFT, e, movewindow, mon:DP-2
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod_SHIFT, h, movewindow, l
