--- a/kanshi/config
+++ b/kanshi/config
@@ -1,18 +1,32 @@
 output "LG Electronics 27GL850 912NTWG0N049" position 0,0
 output "Microstep MPG321UX OLED 0x01010101" mode 3840x2160@240 scale 1.25 position 2560,0
 output "Dell Inc. DELL U2715H GH85D83V2Q6S" position 5632,0 transform 270
+output "LG Electronics LG TV SSCR2 0x01010101" disable
 
 profile default {
     output "LG Electronics 27GL850 912NTWG0N049" enable
     output "Dell Inc. DELL U2715H GH85D83V2Q6S" enable
     output "Microstep MPG321UX OLED 0x01010101" enable
+
+    exec hyprctl keyword monitor desc:LG Electronics 27GL850 912NTWG0N049,2560x1440@144,0x0,1,bitdepth,8,cm,edid
+}
+
+profile default_tv {
+    output "LG Electronics 27GL850 912NTWG0N049" enable
+    output "Dell Inc. DELL U2715H GH85D83V2Q6S" enable
+    output "Microstep MPG321UX OLED 0x01010101" enable
+    output "LG Electronics LG TV SSCR2 0x01010101" disable
+
+    exec hyprctl keyword monitor desc:LG Electronics 27GL850 912NTWG0N049,2560x1440@144,0x0,1,bitdepth,8,cm,edid
 }
 
 profile default_optional_output {
     output "LG Electronics 27GL850 912NTWG0N049" enable position 0,0
     output "Dell Inc. DELL U2715H GH85D83V2Q6S" enable position 5632,0 transform 270
     output "Microstep MPG321UX OLED 0x01010101" enable position 2560,0
-    output * enable
+    output * disable
+
+    exec hyprctl keyword monitor desc:LG Electronics 27GL850 912NTWG0N049,2560x1440@144,0x0,1,bitdepth,8,cm,edid
 }
 
 profile single-screen {
