hyprland: follow EDID for laptop screen
Fix the mapping for SRGB instead of being in wide gammut

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,7 @@ exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_SESS
 exec-once = hash dbus-update-activation-environment 2>/dev/null && dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,2944x1840@90.00Hz,auto,1.6
+monitor=eDP-1,2944x1840@90.00Hz,auto,1.6,bitdepth,8,cm,edid
 monitor=,preferred,auto,auto
 monitor=FALLBACK,1920x1080@60,auto,1
 
