--- a/kanshi/config
+++ b/kanshi/config
@@ -1,9 +1,11 @@
 profile "default" {
   output eDP-1 mode "2944x1840@90.00Hz" scale 1.6 enable
-  # exec swaymsg output eDP-1 max_render_time 7
+  exec hyprctl keyword monitor eDP-1,2944x1840@90.00Hz,auto,1.6,bitdepth,8,cm,edid
 }
 
 profile "dual_screen home" {
   output eDP-1 mode "2944x1840@90.00Hz" position 350,1440 scale 1.6 enable
   output "Microstep MPG321UX OLED " enable mode 3840x2160@240 position 0,0 scale 1.25
+
+  exec hyprctl keyword monitor eDP-1,2944x1840@90.00Hz,350x1440,1.6,bitdepth,8,cm,edid
 }
