hyprland: use rounding corner squircle

--- a/hypr/conf.d/global.conf
+++ b/hypr/conf.d/global.conf
@@ -57,6 +57,8 @@ animations {
 
 decoration {
     rounding = 5
+    # Use squircle rounding.
+    rounding_power = 4
     blur {
         enabled = yes
         size = 3
