foot: add a dark/light toggle binding

--- a/foot/install.conf
+++ b/foot/install.conf
@@ -1,1 +1,5 @@
 "foot.ini": "~/.config/foot/foot.ini"
+"everforest-dark.ini": "~/.config/foot/everforest-dark.ini"
+"everforest-light.ini": "~/.config/foot/everforest-light.ini"
+"apply-theme.sh": "~/.config/foot/apply-theme.sh"
+"theme.sh": "~/.config/foot/theme.sh"
