--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -60,6 +60,10 @@ bindl = L_SHIFT, XF86MonBrightnessUp, exec, light -A 1
 bindl = , XF86MonBrightnessDown, exec, light -U 10
 bindl = L_SHIFT, XF86MonBrightnessDown, exec, light -U 1
 
+# Switch to light or dark mode
+bindl = $mainMod_L_CONTROL, F5, exec, $scripts/theme everforest-dark
+bindl = $mainMod_L_CONTROL, F6, exec, $scripts/theme everforest-light
+
 # Notification (swaync)
 bind = $mainMod, n, exec, swaync-client -t
 bind = $mainMod_SHIFT, n, exec, swaync-client -C
