nvim: automatic background handling
Useful for the everforest-dark/light toggle.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Fix weird characters in weechat and others
 set -g default-terminal "screen-256color"
-set -sa terminal-overrides ',alacritty*:RGB,xterm*:RGB,tmux*:RGB'
+set -sa terminal-overrides ',alacritty*:RGB,foot*:RGB,xterm*:RGB,tmux*:RGB'
 
 set-option -g status on
 
