Hyprland: use created-on-empty rule

--- a/hypr/conf.d/scratchpad.conf
+++ b/hypr/conf.d/scratchpad.conf
@@ -1,20 +1,30 @@
-bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run org.signal.Signal \--enable-features=UseOzonePlatform \--ozone-platform=wayland' --name signal
+bind = L_ALT, s, togglespecialworkspace, signal
+workspace = special:signal, on-created-empty:flatpak run org.signal.Signal --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = L_SHIFT_L_ALT, s, movetoworkspace, special:signal
-bind = L_ALT, f, exec, $scripts/scratchpad 'flatpak run org.telegram.desktop \--enable-features=UseOzonePlatform \--ozone-platform=wayland' --name telegram
+
+bind = L_ALT, f, togglespecialworkspace, telegram
+workspace = special:telegram, on-created-empty:flatpak run org.telegram.desktop \--enable-features=UseOzonePlatform \--ozone-platform=wayland
 bind = L_SHIFT_L_ALT, f, movetoworkspace, special:telegram
+
 bind = L_ALT, d, togglespecialworkspace, temp
 bind = L_SHIFT_L_ALT, d, movetoworkspace, special:temp
 bind = L_SHIFT_L_ALT, d, workspace, special:temp
+
 bind=L_ALT, a, submap, scratchpad
+workspace = special:keepassxc, on-created-empty:flatpak run org.keepassxc.KeePassXC
+workspace = special:spotify, on-created-empty:flatpak run com.spotify.Client
 submap = scratchpad
-bind = L_ALT, k, exec, $scripts/scratchpad 'flatpak run org.keepassxc.KeePassXC' --name keepassxc
+#
+bind = L_ALT, k, togglespecialworkspace, keepassxc
 bind = L_ALT, k, submap, reset
 bind = L_SHIFT_L_ALT, k, movetoworkspace, special:keepassxc
 bind = L_SHIFT_L_ALT, k, submap, reset
-bind = L_ALT, s, exec, $scripts/scratchpad 'flatpak run com.spotify.Client' --name spotify
+
+bind = L_ALT, s, togglespecialworkspace, spotify
 bind = L_ALT, s, submap, reset
 bind = L_SHIFT_L_ALT, s, movetoworkspace, special:spotify
 bind = L_SHIFT_L_ALT, s, submap, reset
 bind = , Return, submap, reset
 bind = , Escape, submap, reset
+#
 submap = reset
