--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -21,7 +21,7 @@ input-field {
 
 label {
   monitor =
-  text = $FPRINTMESSAGE
+  text = $FPRINTPROMPT
   text_align = center # center/right or any value for default left. multi-line text alignment inside label container
   color = rgba(200, 200, 200, 1.0)
   font_size = 25
