hyprland: add a startup script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,11 +32,12 @@ source=~/.config/hypr/conf.d/scratchpad.conf
 # Start applications
 bind = $mainMod, Return, exec, foot
 bind = $mainMod, r, exec, wofi -S drun --allow-images
-bind = L_ALT, z, exec, MESA_SHADER_CACHE_DIR=~/.cache/mesa_shader_cache_db firefox
-bind = L_ALT, x, exec, thunderbird
+bind = L_ALT, z, exec, $scripts/apps/firefox
+bind = L_ALT, x, exec, $scripts/apps/thunderbird
 
 exec = pgrep kanshi && pkill -HUP kanshi || kanshi
 exec-once = swaybg -o \* -m fill -i ~/.config/hypr/wallpaper
 exec-once = swaybg -o HDMI-A-1 -c \#d4a35a
 exec-once = hypridle
 exec-once = $scripts/start
+exec-once = $scripts/start_app
