weechat: automatic config changes after update

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -138,8 +138,10 @@ scroll_page_percent = 100
 search_text_not_found_alert = on
 separator_horizontal = "-"
 separator_vertical = ""
+tab_whitespace_char = "→"
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
+whitespace_char = "·"
 window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
@@ -230,6 +232,7 @@ nick_case_sensitive = off
 nick_completer = ":"
 nick_first_only = off
 nick_ignore_chars = "[]`_-^"
+nick_ignore_words = ""
 partial_completion_alert = on
 partial_completion_command = off
 partial_completion_command_arg = off
