--- a/weechat/weechat/irc.conf
+++ b/weechat/weechat/irc.conf
@@ -4,10 +4,12 @@
 # WARNING: It is NOT recommended to edit this file by hand,
 # especially if WeeChat is running.
 #
-# Use /set or similar command to change settings in WeeChat.
+# Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart
+# For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
+
+config_version = 5
 
 [look]
 buffer_open_before_autojoin = on
@@ -19,44 +21,60 @@ color_nicks_in_nicklist = on
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 ctcp_time_format = "%a, %d %b %Y %T %z"
+display_account_message = on
 display_away = local
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
+display_extended_join = on
 display_host_join = on
 display_host_join_local = on
+display_host_notice = on
 display_host_quit = on
+display_host_wallops = on
 display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
 display_pv_back = on
+display_pv_nick_change = on
+display_pv_warning_address = off
 highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
+ignore_tag_messages = off
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
 item_nick_prefix = on
 join_auto_add_chantype = off
+list_buffer = on
+list_buffer_format_export = "${name} (${users}): "${topic}""
+list_buffer_scroll_horizontal = 10
+list_buffer_sort = "~name2"
+list_buffer_topic_strip_colors = on
 msgbuffer_fallback = current
 new_channel_position = none
+new_list_position = none
 new_pv_position = none
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
 nicks_hide_password = "nickserv"
 notice_as_pv = auto
+notice_nicks_disable_notify = "chanserv,nickserv"
 notice_welcome_redirect = on
 notice_welcome_tags = ""
 notify_tags_ison = "notify_message"
 notify_tags_whois = "notify_message"
+open_pv_buffer_echo_msg = on
 part_closes_buffer = off
 pv_buffer = independent
 pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = independent
 smart_filter = on
+smart_filter_account = on
 smart_filter_chghost = on
 smart_filter_delay = 10
 smart_filter_join = on
@@ -64,22 +82,34 @@ smart_filter_join_unmask = 30
 smart_filter_mode = "ovh"
 smart_filter_nick = on
 smart_filter_quit = on
+smart_filter_setname = on
 temporary_servers = on
 topic_strip_colors = off
+typing_status_nicks = off
+typing_status_self = off
 
 [color]
 input_nick = lightcyan
-item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
+item_tls_version_deprecated = yellow
+item_tls_version_insecure = red
+item_tls_version_ok = green
+list_buffer_line_selected = white
+list_buffer_line_selected_bg = 24
+message_account = cyan
 message_chghost = brown
 message_join = green
+message_kick = red
 message_quit = red
+message_setname = brown
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
+reason_kick = default
 reason_quit = default
+term_remap = "0,-1:darkgray"
 topic_current = default
 topic_new = white
 topic_old = default
@@ -88,7 +118,6 @@ topic_old = default
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 1800
 ban_mask_default = "*!$user@$host"
-channel_encode = off
 colors_receive = on
 colors_send = on
 lag_check = 60
@@ -111,10 +140,11 @@ ignore = znc-whatcd;*;^.*status$
 
 [server_default]
 addresses = ""
-anti_flood_prio_high = 2
-anti_flood_prio_low = 2
+anti_flood = 2000
 autoconnect = off
 autojoin = ""
+autojoin_delay = 0
+autojoin_dynamic = off
 autoreconnect = on
 autoreconnect_delay = 10
 autorejoin = off
@@ -122,10 +152,12 @@ autorejoin_delay = 30
 away_check = 1
 away_check_max_nicks = 25
 capabilities = ""
+charset_message = message
 command = ""
 command_delay = 0
 connection_timeout = 60
-ipv6 = on
+default_chantypes = "#&"
+ipv6 = auto
 local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
@@ -136,6 +168,7 @@ notify = ""
 password = ""
 proxy = ""
 realname = ""
+registered_mode = "r"
 sasl_fail = continue
 sasl_key = ""
 sasl_mechanism = plain
@@ -143,12 +176,13 @@ sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
 split_msg_max_length = 512
-ssl = off
-ssl_cert = ""
-ssl_dhkey_size = 2048
-ssl_fingerprint = ""
-ssl_priorities = "NORMAL"
-ssl_verify = off
+tls = off
+tls_cert = ""
+tls_dhkey_size = 2048
+tls_fingerprint = ""
+tls_password = ""
+tls_priorities = "NORMAL"
+tls_verify = off
 usermode = ""
 username = "anthony"
 
@@ -156,12 +190,13 @@ username = "anthony"
 freenode.addresses = "chat.freenode.net/6667"
 freenode.proxy
 freenode.ipv6
-freenode.ssl
-freenode.ssl_cert
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify = off
+freenode.tls
+freenode.tls_cert
+freenode.tls_password
+freenode.tls_priorities
+freenode.tls_dhkey_size
+freenode.tls_fingerprint
+freenode.tls_verify = off
 freenode.password
 freenode.capabilities
 freenode.sasl_mechanism
@@ -179,14 +214,15 @@ freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.usermode
-freenode.command
 freenode.command_delay
+freenode.command
+freenode.autojoin_delay
 freenode.autojoin
+freenode.autojoin_dynamic
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
+freenode.anti_flood
 freenode.away_check
 freenode.away_check_max_nicks
 freenode.msg_kick
@@ -194,97 +230,19 @@ freenode.msg_part
 freenode.msg_quit
 freenode.notify
 freenode.split_msg_max_length
-znc-aruhier.addresses = "znc.aruhier.fr/8766"
-znc-aruhier.proxy
-znc-aruhier.ipv6
-znc-aruhier.ssl = on
-znc-aruhier.ssl_cert
-znc-aruhier.ssl_priorities
-znc-aruhier.ssl_dhkey_size
-znc-aruhier.ssl_fingerprint
-znc-aruhier.ssl_verify
-znc-aruhier.password = "${sec.data.znc_account}"
-znc-aruhier.capabilities
-znc-aruhier.sasl_mechanism
-znc-aruhier.sasl_username
-znc-aruhier.sasl_password
-znc-aruhier.sasl_key
-znc-aruhier.sasl_timeout
-znc-aruhier.sasl_fail
-znc-aruhier.autoconnect = on
-znc-aruhier.autoreconnect
-znc-aruhier.autoreconnect_delay
-znc-aruhier.nicks = "anthony/RPi-aruhier"
-znc-aruhier.nicks_alternate
-znc-aruhier.username = "anthony/RPi-aruhier"
-znc-aruhier.realname
-znc-aruhier.local_hostname
-znc-aruhier.usermode
-znc-aruhier.command
-znc-aruhier.command_delay
-znc-aruhier.autojoin
-znc-aruhier.autorejoin
-znc-aruhier.autorejoin_delay
-znc-aruhier.connection_timeout
-znc-aruhier.anti_flood_prio_high
-znc-aruhier.anti_flood_prio_low
-znc-aruhier.away_check
-znc-aruhier.away_check_max_nicks
-znc-aruhier.msg_kick
-znc-aruhier.msg_part
-znc-aruhier.msg_quit
-znc-aruhier.notify
-znc-aruhier.split_msg_max_length
-znc-freenode.addresses = "znc.aruhier.fr/8766"
-znc-freenode.proxy
-znc-freenode.ipv6
-znc-freenode.ssl = on
-znc-freenode.ssl_cert
-znc-freenode.ssl_priorities
-znc-freenode.ssl_dhkey_size
-znc-freenode.ssl_fingerprint
-znc-freenode.ssl_verify = off
-znc-freenode.password = "${sec.data.znc_account}"
-znc-freenode.capabilities
-znc-freenode.sasl_mechanism
-znc-freenode.sasl_username
-znc-freenode.sasl_password
-znc-freenode.sasl_key
-znc-freenode.sasl_timeout
-znc-freenode.sasl_fail
-znc-freenode.autoconnect = on
-znc-freenode.autoreconnect
-znc-freenode.autoreconnect_delay
-znc-freenode.nicks = "anthony/Freenode"
-znc-freenode.nicks_alternate
-znc-freenode.username = "anthony/Freenode"
-znc-freenode.realname
-znc-freenode.local_hostname
-znc-freenode.usermode
-znc-freenode.command
-znc-freenode.command_delay
-znc-freenode.autojoin
-znc-freenode.autorejoin
-znc-freenode.autorejoin_delay
-znc-freenode.connection_timeout
-znc-freenode.anti_flood_prio_high
-znc-freenode.anti_flood_prio_low
-znc-freenode.away_check
-znc-freenode.away_check_max_nicks
-znc-freenode.msg_kick
-znc-freenode.msg_part
-znc-freenode.msg_quit
-znc-freenode.notify
-znc-freenode.split_msg_max_length
+freenode.charset_message
+freenode.default_chantypes
+freenode.registered_mode
 znc-rezosup.addresses = "znc.aruhier.fr/8766"
 znc-rezosup.proxy
 znc-rezosup.ipv6
-znc-rezosup.ssl = on
-znc-rezosup.ssl_cert
-znc-rezosup.ssl_priorities
-znc-rezosup.ssl_dhkey_size
-znc-rezosup.ssl_fingerprint
-znc-rezosup.ssl_verify = off
+znc-rezosup.tls = on
+znc-rezosup.tls_cert
+znc-rezosup.tls_password
+znc-rezosup.tls_priorities
+znc-rezosup.tls_dhkey_size
+znc-rezosup.tls_fingerprint
+znc-rezosup.tls_verify = off
 znc-rezosup.password = "${sec.data.znc_account}"
 znc-rezosup.capabilities
 znc-rezosup.sasl_mechanism
@@ -302,14 +260,15 @@ znc-rezosup.username = "anthony/Rezosup"
 znc-rezosup.realname
 znc-rezosup.local_hostname
 znc-rezosup.usermode
-znc-rezosup.command
 znc-rezosup.command_delay
+znc-rezosup.command
+znc-rezosup.autojoin_delay
 znc-rezosup.autojoin
+znc-rezosup.autojoin_dynamic
 znc-rezosup.autorejoin
 znc-rezosup.autorejoin_delay
 znc-rezosup.connection_timeout
-znc-rezosup.anti_flood_prio_high
-znc-rezosup.anti_flood_prio_low
+znc-rezosup.anti_flood
 znc-rezosup.away_check
 znc-rezosup.away_check_max_nicks
 znc-rezosup.msg_kick
@@ -317,15 +276,19 @@ znc-rezosup.msg_part
 znc-rezosup.msg_quit
 znc-rezosup.notify
 znc-rezosup.split_msg_max_length
+znc-rezosup.charset_message
+znc-rezosup.default_chantypes
+znc-rezosup.registered_mode
 rezosup.addresses = "irc.rezosup.org"
 rezosup.proxy
 rezosup.ipv6
-rezosup.ssl
-rezosup.ssl_cert
-rezosup.ssl_priorities
-rezosup.ssl_dhkey_size
-rezosup.ssl_fingerprint
-rezosup.ssl_verify
+rezosup.tls
+rezosup.tls_cert
+rezosup.tls_password
+rezosup.tls_priorities
+rezosup.tls_dhkey_size
+rezosup.tls_fingerprint
+rezosup.tls_verify
 rezosup.password
 rezosup.capabilities
 rezosup.sasl_mechanism
@@ -343,14 +306,15 @@ rezosup.username
 rezosup.realname
 rezosup.local_hostname
 rezosup.usermode
-rezosup.command
 rezosup.command_delay
+rezosup.command
+rezosup.autojoin_delay
 rezosup.autojoin
+rezosup.autojoin_dynamic
 rezosup.autorejoin
 rezosup.autorejoin_delay
 rezosup.connection_timeout
-rezosup.anti_flood_prio_high
-rezosup.anti_flood_prio_low
+rezosup.anti_flood
 rezosup.away_check
 rezosup.away_check_max_nicks
 rezosup.msg_kick
@@ -358,15 +322,19 @@ rezosup.msg_part
 rezosup.msg_quit
 rezosup.notify
 rezosup.split_msg_max_length
+rezosup.charset_message
+rezosup.default_chantypes
+rezosup.registered_mode
 znc-bitlbee.addresses = "znc.aruhier.fr/8766"
 znc-bitlbee.proxy
 znc-bitlbee.ipv6
-znc-bitlbee.ssl = on
-znc-bitlbee.ssl_cert
-znc-bitlbee.ssl_priorities
-znc-bitlbee.ssl_dhkey_size
-znc-bitlbee.ssl_fingerprint
-znc-bitlbee.ssl_verify
+znc-bitlbee.tls = on
+znc-bitlbee.tls_cert
+znc-bitlbee.tls_password
+znc-bitlbee.tls_priorities
+znc-bitlbee.tls_dhkey_size
+znc-bitlbee.tls_fingerprint
+znc-bitlbee.tls_verify
 znc-bitlbee.password = "${sec.data.znc_account}"
 znc-bitlbee.capabilities
 znc-bitlbee.sasl_mechanism
@@ -384,14 +352,15 @@ znc-bitlbee.username = "anthony/Bitlbee"
 znc-bitlbee.realname
 znc-bitlbee.local_hostname
 znc-bitlbee.usermode
-znc-bitlbee.command
 znc-bitlbee.command_delay
+znc-bitlbee.command
+znc-bitlbee.autojoin_delay
 znc-bitlbee.autojoin
+znc-bitlbee.autojoin_dynamic
 znc-bitlbee.autorejoin
 znc-bitlbee.autorejoin_delay
 znc-bitlbee.connection_timeout
-znc-bitlbee.anti_flood_prio_high
-znc-bitlbee.anti_flood_prio_low
+znc-bitlbee.anti_flood
 znc-bitlbee.away_check
 znc-bitlbee.away_check_max_nicks
 znc-bitlbee.msg_kick
@@ -399,15 +368,19 @@ znc-bitlbee.msg_part
 znc-bitlbee.msg_quit
 znc-bitlbee.notify
 znc-bitlbee.split_msg_max_length
+znc-bitlbee.charset_message
+znc-bitlbee.default_chantypes
+znc-bitlbee.registered_mode
 znc-oftc.addresses = "znc.aruhier.fr/8766"
 znc-oftc.proxy
 znc-oftc.ipv6
-znc-oftc.ssl = on
-znc-oftc.ssl_cert
-znc-oftc.ssl_priorities
-znc-oftc.ssl_dhkey_size
-znc-oftc.ssl_fingerprint
-znc-oftc.ssl_verify = off
+znc-oftc.tls = on
+znc-oftc.tls_cert
+znc-oftc.tls_password
+znc-oftc.tls_priorities
+znc-oftc.tls_dhkey_size
+znc-oftc.tls_fingerprint
+znc-oftc.tls_verify = off
 znc-oftc.password = "${sec.data.znc_account}"
 znc-oftc.capabilities
 znc-oftc.sasl_mechanism
@@ -425,14 +398,15 @@ znc-oftc.username = "anthony/OFTC"
 znc-oftc.realname
 znc-oftc.local_hostname
 znc-oftc.usermode
-znc-oftc.command
 znc-oftc.command_delay
+znc-oftc.command
+znc-oftc.autojoin_delay
 znc-oftc.autojoin
+znc-oftc.autojoin_dynamic
 znc-oftc.autorejoin
 znc-oftc.autorejoin_delay
 znc-oftc.connection_timeout
-znc-oftc.anti_flood_prio_high
-znc-oftc.anti_flood_prio_low
+znc-oftc.anti_flood
 znc-oftc.away_check
 znc-oftc.away_check_max_nicks
 znc-oftc.msg_kick
@@ -440,56 +414,19 @@ znc-oftc.msg_part
 znc-oftc.msg_quit
 znc-oftc.notify
 znc-oftc.split_msg_max_length
-znc-opentrackers.addresses = "znc.aruhier.fr/8766"
-znc-opentrackers.proxy
-znc-opentrackers.ipv6
-znc-opentrackers.ssl = on
-znc-opentrackers.ssl_cert
-znc-opentrackers.ssl_priorities
-znc-opentrackers.ssl_dhkey_size
-znc-opentrackers.ssl_fingerprint
-znc-opentrackers.ssl_verify = off
-znc-opentrackers.password = "${sec.data.znc_account}"
-znc-opentrackers.capabilities
-znc-opentrackers.sasl_mechanism
-znc-opentrackers.sasl_username
-znc-opentrackers.sasl_password
-znc-opentrackers.sasl_key
-znc-opentrackers.sasl_timeout
-znc-opentrackers.sasl_fail
-znc-opentrackers.autoconnect = on
-znc-opentrackers.autoreconnect
-znc-opentrackers.autoreconnect_delay
-znc-opentrackers.nicks = "anthony/OpenTrackers"
-znc-opentrackers.nicks_alternate
-znc-opentrackers.username = "anthony/OpenTrackers"
-znc-opentrackers.realname
-znc-opentrackers.local_hostname
-znc-opentrackers.usermode
-znc-opentrackers.command
-znc-opentrackers.command_delay
-znc-opentrackers.autojoin
-znc-opentrackers.autorejoin
-znc-opentrackers.autorejoin_delay
-znc-opentrackers.connection_timeout
-znc-opentrackers.anti_flood_prio_high
-znc-opentrackers.anti_flood_prio_low
-znc-opentrackers.away_check
-znc-opentrackers.away_check_max_nicks
-znc-opentrackers.msg_kick
-znc-opentrackers.msg_part
-znc-opentrackers.msg_quit
-znc-opentrackers.notify
-znc-opentrackers.split_msg_max_length
+znc-oftc.charset_message
+znc-oftc.default_chantypes
+znc-oftc.registered_mode
 znc-redacted.addresses = "znc.aruhier.fr/8766"
 znc-redacted.proxy
 znc-redacted.ipv6
-znc-redacted.ssl = on
-znc-redacted.ssl_cert
-znc-redacted.ssl_priorities
-znc-redacted.ssl_dhkey_size
-znc-redacted.ssl_fingerprint
-znc-redacted.ssl_verify = off
+znc-redacted.tls = on
+znc-redacted.tls_cert
+znc-redacted.tls_password
+znc-redacted.tls_priorities
+znc-redacted.tls_dhkey_size
+znc-redacted.tls_fingerprint
+znc-redacted.tls_verify = off
 znc-redacted.password = "${sec.data.znc_account}"
 znc-redacted.capabilities
 znc-redacted.sasl_mechanism
@@ -507,14 +444,15 @@ znc-redacted.username = "anthony/Redacted"
 znc-redacted.realname
 znc-redacted.local_hostname
 znc-redacted.usermode
-znc-redacted.command
 znc-redacted.command_delay
+znc-redacted.command
+znc-redacted.autojoin_delay
 znc-redacted.autojoin
+znc-redacted.autojoin_dynamic
 znc-redacted.autorejoin
 znc-redacted.autorejoin_delay
 znc-redacted.connection_timeout
-znc-redacted.anti_flood_prio_high
-znc-redacted.anti_flood_prio_low
+znc-redacted.anti_flood
 znc-redacted.away_check
 znc-redacted.away_check_max_nicks
 znc-redacted.msg_kick
@@ -522,15 +460,19 @@ znc-redacted.msg_part
 znc-redacted.msg_quit
 znc-redacted.notify
 znc-redacted.split_msg_max_length
+znc-redacted.charset_message
+znc-redacted.default_chantypes
+znc-redacted.registered_mode
 znc-online.addresses = "znc.aruhier.fr/8766"
 znc-online.proxy
 znc-online.ipv6
-znc-online.ssl = on
-znc-online.ssl_cert
-znc-online.ssl_priorities
-znc-online.ssl_dhkey_size
-znc-online.ssl_fingerprint
-znc-online.ssl_verify = off
+znc-online.tls = on
+znc-online.tls_cert
+znc-online.tls_password
+znc-online.tls_priorities
+znc-online.tls_dhkey_size
+znc-online.tls_fingerprint
+znc-online.tls_verify = off
 znc-online.password = "${sec.data.znc_account}"
 znc-online.capabilities
 znc-online.sasl_mechanism
@@ -548,14 +490,15 @@ znc-online.username = "anthony/Online"
 znc-online.realname
 znc-online.local_hostname
 znc-online.usermode
-znc-online.command
 znc-online.command_delay
+znc-online.command
+znc-online.autojoin_delay
 znc-online.autojoin
+znc-online.autojoin_dynamic
 znc-online.autorejoin
 znc-online.autorejoin_delay
 znc-online.connection_timeout
-znc-online.anti_flood_prio_high
-znc-online.anti_flood_prio_low
+znc-online.anti_flood
 znc-online.away_check
 znc-online.away_check_max_nicks
 znc-online.msg_kick
@@ -563,3 +506,52 @@ znc-online.msg_part
 znc-online.msg_quit
 znc-online.notify
 znc-online.split_msg_max_length
+znc-online.charset_message
+znc-online.default_chantypes
+znc-online.registered_mode
+znc-libera.addresses = "znc.aruhier.fr/8766"
+znc-libera.proxy
+znc-libera.ipv6
+znc-libera.tls = on
+znc-libera.tls_cert
+znc-libera.tls_password
+znc-libera.tls_priorities
+znc-libera.tls_dhkey_size
+znc-libera.tls_fingerprint
+znc-libera.tls_verify = off
+znc-libera.password = "${sec.data.znc_account}"
+znc-libera.capabilities
+znc-libera.sasl_mechanism
+znc-libera.sasl_username
+znc-libera.sasl_password
+znc-libera.sasl_key
+znc-libera.sasl_timeout
+znc-libera.sasl_fail
+znc-libera.autoconnect = on
+znc-libera.autoreconnect
+znc-libera.autoreconnect_delay
+znc-libera.nicks = "anthony/Libera"
+znc-libera.nicks_alternate
+znc-libera.username = "anthony/Libera"
+znc-libera.realname
+znc-libera.local_hostname
+znc-libera.usermode
+znc-libera.command_delay
+znc-libera.command
+znc-libera.autojoin_delay
+znc-libera.autojoin
+znc-libera.autojoin_dynamic
+znc-libera.autorejoin
+znc-libera.autorejoin_delay
+znc-libera.connection_timeout
+znc-libera.anti_flood
+znc-libera.away_check
+znc-libera.away_check_max_nicks
+znc-libera.msg_kick
+znc-libera.msg_part
+znc-libera.msg_quit
+znc-libera.notify
+znc-libera.split_msg_max_length
+znc-libera.charset_message
+znc-libera.default_chantypes
+znc-libera.registered_mode
