weechat: link irc.conf to config

--- a/weechat/install.conf
+++ b/weechat/install.conf
@@ -2,6 +2,7 @@
 "weechat/autosort.conf": "~/.weechat/autosort.conf"
 "weechat/buflist.conf": "~/.weechat/buflist.conf"
 "weechat/fset.conf": "~/.weechat/fset.conf"
+"weechat/irc.conf": "~/.weechat/irc.conf"
 "weechat/otr.conf": "~/.weechat/otr.conf"
 "weechat/plugins.conf": "~/.weechat/plugins.conf"
 "weechat/urlgrab.conf": "~/.weechat/urlgrab.conf"
