wofi: Fixes corners

--- a/hypr/conf.d/rules.conf
+++ b/hypr/conf.d/rules.conf
@@ -21,3 +21,5 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(thunderbird)$,title:^(.*)(Reminder)(.*)$
 
 layerrule = blur, logout_dialog
+layerrule = blur, wofi
+layerrule = ignorealpha 0.5, wofi
