hyprland: update for new GPU
Uses monitor names when possible, to not depend on the output name.

--- a/hypr/conf.d/bind.conf
+++ b/hypr/conf.d/bind.conf
@@ -98,12 +98,12 @@ bind = ALT, Tab, focuscurrentorlast,
 bind = ALT, Tab, bringactivetotop,
 
 # Move to screen
-bind = $mainMod, q, focusmonitor, DP-3
-bind = $mainMod_SHIFT, q, movewindow, mon:DP-3
-bind = $mainMod, w, focusmonitor, DP-1
-bind = $mainMod_SHIFT, w, movewindow, mon:DP-1
-bind = $mainMod, e, focusmonitor, DP-2
-bind = $mainMod_SHIFT, e, movewindow, mon:DP-2
+bind = $mainMod, q, focusmonitor, desc:LG Electronics 27GL850 912NTWG0N049
+bind = $mainMod_SHIFT, q, movewindow, mon:desc:LG Electronics 27GL850 912NTWG0N049
+bind = $mainMod, w, focusmonitor, desc:Microstep MPG321UX OLED 0x01010101
+bind = $mainMod_SHIFT, w, movewindow, mon:desc:Microstep MPG321UX OLED 0x01010101
+bind = $mainMod, e, focusmonitor, desc:Dell Inc. DELL U2715H GH85D83V2Q6S
+bind = $mainMod_SHIFT, e, movewindow, mon:desc:Dell Inc. DELL U2715H GH85D83V2Q6S
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod_SHIFT, h, movewindow, l
