--- a/hypr/conf.d/workspaces.conf
+++ b/hypr/conf.d/workspaces.conf
@@ -11,9 +11,9 @@ $ws10 = 8
 $ws11 = 9
 $ws12 = 10
 
-workspace=1,monitor:DP-1,default:true
-workspace=2,monitor:DP-2,default:true
-workspace=3,monitor:DP-3,default:true
+workspace=1,monitor:desc:Microstep MPG321UX OLED 0x01010101,default:true
+workspace=2,monitor:desc:Dell Inc. DELL U2715H GH85D83V2Q6S,default:true
+workspace=3,monitor:desc:LG Electronics 27GL850 912NTWG0N049,default:true
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, a, focusworkspaceoncurrentmonitor, 1
