--- a/kanshi/config
+++ b/kanshi/config
@@ -34,3 +34,7 @@ profile single-screen {
     output "LG Electronics 27GL850 912NTWG0N049" disable
     output "Dell Inc. DELL U2715H GH85D83V2Q6S" disable
 }
+
+profile testing {
+    output "Microstep MPG321UX OLED 0x01010101" enable position 0,0
+}
