--- a/waybar/config
+++ b/waybar/config
@@ -2,7 +2,7 @@
     "layer": "top",
     "height": 22, // Waybar height (to be removed for auto height)
     "margin-bottom": 1,
-    "output": ["DP-2", "DP-3"],
+    "output": ["DP-2", "HDMI-A-1"],
     "modules-left": ["mpd", "hyprland/submap"],
     "modules-center": ["hyprland/workspaces"],
     "modules-right": ["backlight", "pulseaudio", "custom/swaync", "clock"],
