--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,3 +37,6 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+# nvim uses focus events
+set-option -g focus-events on
