laptop-anthony: moved to Fedora ARM

--- a/qt6ct/qt6ct.conf
+++ b/qt6ct/qt6ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n\0\0\0\0\0\0\0\xf\xf7\0\0\x3L\0\0\n\0\0\0\0\0\0\0\xf\xff\0\0\x3T\0\0\0\0\x2\0\0\0\f\0\0\0\n\0\0\0\0\0\0\0\xf\xf7\0\0\x3L)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x8f\0\0\x2*\0\0\0\0\0\0\0\0\0\0\x3\x8f\0\0\x2*\0\0\0\0\x2\0\0\0\a0\0\0\0\0\0\0\0\0\0\0\x3\x8f\0\0\x2*)
 
 [Troubleshooting]
 force_raster_widgets=1
