--- a/hypr/conf.d/input.conf
+++ b/hypr/conf.d/input.conf
@@ -22,9 +22,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-gestures {
-    workspace_swipe = on
-}
+gesture = 3, horizontal, workspace
 
 cursor {
     no_warps = yes
