--- a/hypr/conf.d/input.conf
+++ b/hypr/conf.d/input.conf
@@ -22,10 +22,8 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-gestures {
-    workspace_swipe = off
-}
-
 cursor {
     no_warps = yes
 }
+
+gesture = 3, horizontal, workspace
